[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Background_tune.ogg" type="AudioStream" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="Ticker" type="Timer" parent="."]

[node name="LeftTimer" type="Timer" parent="."]

[node name="RightTimer" type="Timer" parent="."]

[node name="LockTimer" type="Timer" parent="."]
[connection signal="button_pressed" from="GUI" to="." method="_on_GUI_button_pressed"]
[connection signal="timeout" from="Ticker" to="." method="_on_Ticker_timeout"]
[connection signal="timeout" from="LeftTimer" to="." method="_on_LeftTimer_timeout"]
[connection signal="timeout" from="RightTimer" to="." method="_on_RightTimer_timeout"]
[connection signal="timeout" from="LockTimer" to="." method="_on_LockTimer_timeout"]
